--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
    <body>
     
     <header class=links>
-        <nav><a href="index.html">Home</a></nav>
+        <nav><a href="https://robo-chick.github.io/marketing-page/">Home</a></nav>
         <nav><a href="about.html">About</a></nav>
         <nav><a href="contact.html">Contact</a></nav>
         <nav><a href="class.hatml">Find a class</a></nav>
@@ -97,7 +97,7 @@
     </div>
     
 <footer class=links>
-    <nav><a href="index.html">Home</a></nav>
+    <nav><a href="https://robo-chick.github.io/marketing-page/">Home</a></nav>
     <nav><a href="about.html">About</a></nav>
     <nav><a href="contact.html">Contact</a></nav>
     <nav><a href="class.hatml">Find a class</a></nav>
