--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <nav><a href="about.html">About</a></nav>
         <nav><a href="contact.html">Contact</a></nav>
         <nav><a href="class.hatml">Find a class</a></nav>
-        <nav><a href="login">Login</a></nav>
+        <nav><a href="https://anywhere-fitness-minibw.netlify.com/">Login</a></nav>
                 
         
     </header>
@@ -101,7 +101,7 @@
     <nav><a href="about.html">About</a></nav>
     <nav><a href="contact.html">Contact</a></nav>
     <nav><a href="class.hatml">Find a class</a></nav>
-    <nav><a href="login">Login</a></nav>
+    <nav><a href="https://anywhere-fitness-minibw.netlify.com/">Login</a></nav>
 
 </footer>
 
