--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <![endif]-->
 </head>
 <body>
+   <section class="topHeading">
+       <h1>Anywhere Fitness</h1>
+   </section>
     <nav role='navigation'>
         <div id='menuToggle'>
             <input type="checkbox"/>
@@ -29,9 +32,48 @@
                 <a href="https://https-github-com-anywherefitness-adam.github.io/marketing-page/about" target="_blank""><li>About</li></a>
                 <a href="#"><li>Contact</li></a>
                 <a href="#"><li>Find A Class</li></a>
+                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank"><li>Login</li></a>
+                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank"><li>Sign Up</li></a>
             </ul>
         </div>
     </nav>
-    
+
+    <header>
+        <div class='topImages'>
+        <img src="img/women-curling.jpg" alt="women curling hand weights">
+        <img src="img/women-working-out.jpg" alt="women working out with hand weights">
+        </div>
+        <div class='topSection'>
+        <h2>Welcome to Anywhere Fitness</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto minima, error ducimus temporibus ea, corporis voluptatum deserunt nam obcaecati, possimus eligendi. Fuga iste, eveniet assumenda eaque quas recusandae autem commodi.
+        </div>
+    </header>
+
+    <section class='content'>
+        <div class='leftContent'>
+            <img src="img/aerobics-class.jpg" alt="smiling woman after fitness class">
+            <h4>Class Locator</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perferendis voluptates quo provident possimus blanditiis excepturi veritatis adipisci id, architecto nihil quos. Quas, architecto consequatur? Nisi ex quo dicta dolorum!</p>
+            <div class="btn">Find A Class</div>
+        </div>
+        <div class='middleContent'>
+            <img src="img/fit-women-on-phones.jpg" alt="fit women on phones">
+            <h4>Subscribe Today!</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem iste cum nobis eligendi. Veniam numquam repudiandae consequatur. Sapiente beatae hic accusamus quibusdam consectetur fuga porro iure magnam maiores id.</p>
+            <div class="btn">Subscribe Today!</div>
+        </div>
+        <div class='rightContent'>
+            <img src="img/personal-trainer.jpg" alt="man assisting woman on TRX trainer">
+            <h4>For Instructors</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa commodi illum animi vero alias exercitationem laudantium voluptatibus molestias, aspernatur, unde voluptatum? Distinctio accusamus ab accusantium laudantium necessitatibus sint, in iure!</p>
+            <div class="btn">Instructor Sign Up</div>
+        </div>
+    </section>
+
+
+
+
+
+
 </body>
 </html>
