finished styling, but working on fancy buttons so maybe not finished

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="img/aerobics-class.jpg" alt="smiling woman after fitness class">
             <h4>Class Locator</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perferendis voluptates quo provident possimus blanditiis excepturi veritatis adipisci id, architecto nihil quos. Quas, architecto consequatur? Nisi ex quo dicta dolorum!</p>
-            <div class="btn">Find A Class</div>
+            <button type="btn">Find A Class</button>
         </div>
         <div class='middleContent'>
             <img src="img/fit-women-on-phones.jpg" alt="fit women on phones">
@@ -69,6 +69,17 @@
             <div class="btn">Instructor Sign Up</div>
         </div>
     </section>
+
+    <nav class='bottomNav'>
+        <a href="#">Home</a>
+                <a href="https://https-github-com-anywherefitness-adam.github.io/marketing-page/about" target="_blank"">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Find A Class</a>
+                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank">Login</a>
+                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank">Sign Up</a>
+    </nav>
+
+    <footer>Copyright© Anywhere Fitness 2020 All Rights Reserved.</footer>
 
 
 
