--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
             <img src="img/aerobics-class.jpg" alt="smiling woman after fitness class">
             <h4>Class Locator</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perferendis voluptates quo provident possimus blanditiis excepturi veritatis adipisci id, architecto nihil quos. Quas, architecto consequatur? Nisi ex quo dicta dolorum!</p>
-            <button type="btn">Find A Class</button>
+            <div class="btn">
+            <a href="#" class="button midnight">Find A Class</a>
+            </div>
         </div>
         <div class='middleContent'>
             <img src="img/fit-women-on-phones.jpg" alt="fit women on phones">
-            <h4>Subscribe Today!</h4>
+            <h4>Subscription Information</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem iste cum nobis eligendi. Veniam numquam repudiandae consequatur. Sapiente beatae hic accusamus quibusdam consectetur fuga porro iure magnam maiores id.</p>
             <div class="btn">Subscribe Today!</div>
         </div>
