finished buttons and final text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#"><li>Contact</li></a>
                 <a href="#"><li>Find A Class</li></a>
                 <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank"><li>Login</li></a>
-                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank"><li>Sign Up</li></a>
+                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank"><li>Subscribe</li></a>
             </ul>
         </div>
     </nav>
@@ -45,7 +45,7 @@
         </div>
         <div class='topSection'>
         <h2>Welcome to Anywhere Fitness</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto minima, error ducimus temporibus ea, corporis voluptatum deserunt nam obcaecati, possimus eligendi. Fuga iste, eveniet assumenda eaque quas recusandae autem commodi.
+            <p>The Anywhere Fitness app was created by fitness enthusiasts who wanted a way to schedule their favorite classes and training sessions all in one place. We work with Certified Personal Trainers, Group Fitness Instructors, yoga teachers and fitness studios all over the world to bring you fun classes around your busy lifestyle. No matter where you are, we'll connect you with the perfect fit!</p>
         </div>
     </header>
 
@@ -53,22 +53,20 @@
         <div class='leftContent'>
             <img src="img/aerobics-class.jpg" alt="smiling woman after fitness class">
             <h4>Class Locator</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat perferendis voluptates quo provident possimus blanditiis excepturi veritatis adipisci id, architecto nihil quos. Quas, architecto consequatur? Nisi ex quo dicta dolorum!</p>
-            <div class="btn">
+            <p>Search classes in your area by name, location, class type, intensity level and even max class size. Reserve your spot right from the app!</p>
             <a href="#" class="button midnight">Find A Class</a>
-            </div>
         </div>
         <div class='middleContent'>
             <img src="img/fit-women-on-phones.jpg" alt="fit women on phones">
             <h4>Subscription Information</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat dolorem iste cum nobis eligendi. Veniam numquam repudiandae consequatur. Sapiente beatae hic accusamus quibusdam consectetur fuga porro iure magnam maiores id.</p>
-            <div class="btn">Subscribe Today!</div>
+            <p>Subscribers receive special perks like punch cards for discounts on future classes, VIP reservation status, and more!</p>
+            <a href="https://anywhere-fitness-minibw.netlify.com/" class="button midnight">Subscribe</a>
         </div>
         <div class='rightContent'>
             <img src="img/personal-trainer.jpg" alt="man assisting woman on TRX trainer">
             <h4>For Instructors</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa commodi illum animi vero alias exercitationem laudantium voluptatibus molestias, aspernatur, unde voluptatum? Distinctio accusamus ab accusantium laudantium necessitatibus sint, in iure!</p>
-            <div class="btn">Instructor Sign Up</div>
+            <p>Are you a group fitness instructor, yoga teacher, personal trainer or fitness studio looking to increase your earning potential? With Anywhere Fitness you can create your own personal bio page and see your schedule right from your smart phone. We handle the advertising so that you can focus on creating awesome classes and experiences for your clients.</p>
+            <a href="#" class="button midnight">Sign Up</a>
         </div>
     </section>
 
@@ -78,7 +76,7 @@
                 <a href="#">Contact</a>
                 <a href="#">Find A Class</a>
                 <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank">Login</a>
-                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank">Sign Up</a>
+                <a href="https://anywhere-fitness-minibw.netlify.com/" target="_blank">Subscribe</a>
     </nav>
 
     <footer>Copyright© Anywhere Fitness 2020 All Rights Reserved.</footer>
