added media queries for mobile

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         </div>
     </nav>
 
+    <div class="container home">
+        
     <header>
         <div class='topImages'>
         <img src="img/women-curling.jpg" alt="women curling hand weights">
@@ -69,6 +71,7 @@
             <a href="#" class="button midnight">Sign Up</a>
         </div>
     </section>
+</div> <!-- container -->
 
     <nav class='bottomNav'>
         <a href="#">Home</a>
